<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  a:layout_width="match_parent"
  a:layout_height="match_parent"
  a:orientation="vertical"
  a:fitsSystemWindows="true"
  tools:ignore="HardcodedText">

  <LinearLayout
    a:layout_width="match_parent"
    a:layout_height="wrap_content"
    a:orientation="vertical"
    a:padding="10dp">

    <TextView
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:text="@string/app_name"
      a:textSize="40sp" />

    <TextView
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:layout_marginTop="10dp"
      a:text="@string/preferred_audio_output"/>

    <RadioGroup
      a:id="@+id/output_group"
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:orientation="vertical">

      <RadioButton
        a:id="@+id/output_default"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/output_default"/>

      <RadioButton
        a:id="@+id/output_bluetooth"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/output_bluetooth"/>

      <RadioButton
        a:id="@+id/output_wired"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/output_wired"/>

      <RadioButton
        a:id="@+id/output_usb"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/output_usb"/>
    </RadioGroup>

    <TableLayout
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:stretchColumns="0,1">

      <TableRow>
        <TextView
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:text=""/>
        <TextView
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:gravity="center"
          a:text="@string/bluetooth_track_names"/>
      </TableRow>

      <TableRow>
        <Button
          a:id="@+id/explore_mode_button"
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:layout_margin="10dp"
          a:text="@string/explore_mode_button"/>
        <Button
          a:id="@+id/remote_send_opener"
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:layout_margin="10dp"
          a:text="@string/remote_send_button"/>
      </TableRow>

      <TableRow>
        <Button
          a:id="@+id/browser_queue_opener"
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:layout_margin="10dp"
          a:text="@string/dj_mode_button"/>
        <Button
          a:id="@+id/remote_receive_opener"
          a:layout_width="0dp"
          a:layout_height="wrap_content"
          a:layout_weight="1"
          a:layout_margin="10dp"
          a:text="@string/remote_receive_button"/>
      </TableRow>

    </TableLayout>

     <Button
       a:id="@+id/stop_after_current"
       a:layout_width="match_parent"
       a:layout_height="wrap_content"
       a:layout_margin="10dp"
       a:text="@string/stop_after_current_button"/>

     <Button
       a:id="@+id/clear_queue"
       a:layout_width="match_parent"
       a:layout_height="wrap_content"
       a:layout_margin="10dp"
       a:text="@string/clear_queue_button"/>

    <TextView
      a:id="@+id/fade_out_label"
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:layout_marginTop="10dp"
      a:text="@string/fade_out_label"/>

    <SeekBar
      a:id="@+id/fade_out_slider"
      a:layout_width="match_parent"
      a:layout_height="wrap_content"
      a:max="9"
      a:progressTint="@color/foreground"
      a:thumbTint="@color/foreground"
      a:progressBackgroundTint="@color/buttonBackground"/>

     <Button
       a:id="@+id/show_license"
       a:layout_width="match_parent"
       a:layout_height="wrap_content"
       a:layout_margin="10dp"
       style="?android:attr/borderlessButtonStyle"
       a:text="@string/license_button"/>

  </LinearLayout>
</ScrollView>
